:Обновление для проверки работы репозитория

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-  <h1 class="h1">Мама</h1>
+  <h1 class="h1">Папа и Мама</h1>
 </body>
 </html>
